--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/eslint": "^9.6.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
     "@types/pdfkit": "^0.17.3",
