--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "NODE_OPTIONS='--max-old-space-size=1024' prisma generate && tsup src --format esm",
+    "build": "tsc",
     "start": "node dist/index.js",
     "seed": "node --loader ts-node/esm src/prisma/seeds/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
