--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "prisma generate && tsup src --format esm",
-    "start": "node dist/index.js",
+    "build": "tsc",
+    "start": "tsx src/index.ts",
     "seed": "node --loader ts-node/esm src/prisma/seeds/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/index.ts"
