--- a/package.json
+++ b/package.json
@@ -28,21 +28,27 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "exceljs": "^4.4.0",
+    "express": "^5.1.0",
     "fastify-cors": "^6.1.0",
     "fastify-jwt": "^4.2.0",
     "fastify-rate-limit": "^5.9.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.17.2",
     "pino": "^9.8.0",
     "prisma": "^6.13.0",
+    "sharp": "^0.34.5",
     "tsup": "^8.5.0",
+    "uuid": "^13.0.0",
     "zod": "^4.0.15"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.0",
     "@types/pdfkit": "^0.17.3",
     "fastify": "^5.4.0",
