--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^9.1.0",
+    "@fastify/multipart": "^9.3.0",
     "@fastify/rate-limit": "^10.3.0",
     "@prisma/client": "^6.13.0",
     "@types/nodemailer": "^7.0.3",
